--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ node_modules
 !.env.example
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+/dist
 
 # Editor directories and files
 .vscode/*
