--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -7,11 +7,17 @@ edition = "2021"
 
 [features]
 custom-protocol = ["tauri/custom-protocol"]
+bson-kv = ["dep:bson"]
 
 [dependencies]
+tokio = { version = "1", features = ["full"] }
 tauri = { version = "1.6", features = ["shell-open"] }
+
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+bson = { version = "2.10", optional = true }
+
+thiserror = "1.0"
 
 [build-dependencies]
 tauri-build = { version = "1", features = [] }
