--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,15 +12,29 @@ bson-kv = ["dep:bson"]
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 tauri = { version = "1.6", features = ["shell-open"] }
+tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
+log = "0.4"
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 bson = { version = "2.10", optional = true }
+chrono = "0.4"
 
 thiserror = "1.0"
 
+sqlx = { version = "0.7", features = [
+    "runtime-tokio",
+    "tls-rustls",
+    "sqlite",
+    "migrate",
+    "chrono",
+] }
+
 [build-dependencies]
 tauri-build = { version = "1", features = [] }
+
+[dev-dependencies]
+env_logger = "0.11"
 
 [profile.release]
 panic = "abort"
