--- a/package.json
+++ b/package.json
@@ -12,27 +12,26 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.5.3",
+    "@tauri-apps/api": "^1",
     "ts-results": "^3.3.0"
   },
   "devDependencies": {
-    "@skeletonlabs/skeleton": "^2.9.1",
-    "@skeletonlabs/tw-plugin": "^0.3.1",
-    "@sveltejs/adapter-auto": "^3.2.0",
-    "@sveltejs/adapter-static": "^3.0.1",
-    "@sveltejs/kit": "^2.5.5",
-    "@sveltejs/vite-plugin-svelte": "^3.1.0",
-    "@tauri-apps/cli": "^1.5.11",
-    "@types/node": "^20.12.7",
+    "@skeletonlabs/skeleton": "^2.10.1",
+    "@skeletonlabs/tw-plugin": "^0.4.0",
+    "@sveltejs/adapter-static": "^3.0.2",
+    "@sveltejs/kit": "^2.5.18",
+    "@sveltejs/vite-plugin-svelte": "^3.1.1",
+    "@tauri-apps/cli": "^1",
+    "@types/node": "^20.14.9",
     "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "postcss-load-config": "^5.0.3",
-    "svelte": "^4.2.13",
-    "svelte-check": "^3.6.9",
-    "tailwindcss": "^3.4.3",
-    "tslib": "^2.6.2",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.8",
-    "vite-plugin-tailwind-purgecss": "^0.2.1"
+    "postcss": "^8.4.39",
+    "postcss-load-config": "^5.1.0",
+    "svelte": "^4.2.18",
+    "svelte-check": "^3.8.4",
+    "tailwindcss": "^3.4.4",
+    "tslib": "^2.6.3",
+    "typescript": "^5.5.2",
+    "vite": "^5.3.2",
+    "vite-plugin-tailwind-purgecss": "0.3.3"
   }
 }
