--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@sveltejs/adapter-static": "^3.0.2",
     "@sveltejs/kit": "^2.5.18",
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.13",
     "@tauri-apps/cli": "^1",
     "@types/node": "^20.14.9",
     "autoprefixer": "^10.4.19",
