--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,33 +15,23 @@ custom-protocol = ["tauri/custom-protocol"]
 bson-kv = ["dep:bson"]
 
 [dependencies]
-tokio = { version = "1", features = ["full"] }
-tauri = { version = "1.6", features = ["shell-open"] }
-tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
-log = "0.4"
+tokio.workspace = true
 
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-bson = { version = "2.10", optional = true }
-chrono = "0.4"
+tauri.workspace = true
+tauri-plugin-log.workspace = true
+log.workspace = true
 
-thiserror = "1.0"
+serde.workspace = true
+serde_json.workspace = true
+bson = { workspace = true, optional = true }
+chrono.workspace = true
 
-sqlx = { version = "0.7", features = [
-    "runtime-tokio",
-    "tls-rustls",
-    "sqlite",
-    "migrate",
-    "chrono",
-] }
+thiserror.workspace = true
+
+sqlx.workspace = true
 
 [build-dependencies]
-tauri-build = { version = "1", features = [] }
+tauri-build.workspace = true
 
 [dev-dependencies]
-env_logger = "0.11"
-
-[profile.release]
-panic = "abort"
-codegen-units = 1
-lto = true
+env_logger.workspace = true
